--- a/frontend/product_details/product_details.html
+++ b/frontend/product_details/product_details.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="product_style.css">
 </head>
 <body>
-    
     <div class="product-details-container">
         <div id="similar-products"></div>
-        <h1 id="product-name"></h1>
-        <img id="product-image" src="" alt="">
-        <p id="product-price"></p>
-        <p id="product-lowest-supermarket"></p>
+        <div class="product-info">
+            <h1 id="product-name"></h1>
+            <img id="product-image" src="" alt="">
+        </div>
+        <div id="other-prices" class="price-container"></div>
+        <div id="product-details" class="details-container"></div>
     </div>
-
     <script src="product_details.js"></script>
 </body>
 </html>
