--- a/frontend/product_details/product_details.html
+++ b/frontend/product_details/product_details.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Details</title>
-    <link rel="stylesheet" href="product_style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="product-details-container">
-        <div id="similar-products"></div>
-        <div class="product-info">
-            <h1 id="product-name"></h1>
-            <img id="product-image" src="" alt="">
-        </div>
-        <div id="other-prices" class="price-container"></div>
-        <div id="product-details" class="details-container"></div>
+    <div class="container">
+        <h1 id="product-name">Product Name</h1>
+        <img id="product-image" src="" alt="Product Image" class="product-image">
+
+        <div id="supermarkets-container" class="prices-container"></div>
     </div>
+
     <script src="product_details.js"></script>
 </body>
 </html>
