added a webpage for each supermarket

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="similar-products"></div>
+    <div class="body-wrapper">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="supermarkets/mega/mega.html">Mega Image</a></li>
+                    <li><a href="supermarkets/penny/penny.html">Penny</a></li>
+                    <li><a href="supermarkets/kaufland/kaufland.html">Kaufland</a></li>
+                    <li><a href="supermarkets/auchan/auchan.html">Auchan</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div id="similar-products"></div>
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
