--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="body-wrapper">
         <header>
+            <h1 id="title">PROJECT IEFTINEALĂ</h1>
             <nav>
                 <ul>
                     <li><a href="supermarkets/mega/mega.html">Mega Image</a></li>
