--- a/frontend/product_details/product_details.html
+++ b/frontend/product_details/product_details.html
@@ -9,17 +9,18 @@
 </head>
 
 <body>
-    <header class="header">
+    <div class="body-wrapper">
+        <header class="header">
+            <div class="container">
+                <h1>Product Details</h1>
+            </div>
+        </header>
+
         <div class="container">
-            <h1>Product Details</h1>
+            <div id="product-details" class="product-details"></div>
+            <div id="product-instances" class="product-instances"></div>
         </div>
-    </header>
-
-    <div class="container">
-        <div id="product-details" class="product-details"></div>
-        <div id="product-instances" class="product-instances"></div>
     </div>
-
     <script src="product_script.js"></script>
 </body>
 
