almost final version

--- a/frontend/product_details/product_details.html
+++ b/frontend/product_details/product_details.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Details</title>
     <link rel="stylesheet" href="product_style.css">
 </head>
-
 <body>
-    <div class="body-wrapper">
-        <header class="header">
-            <div class="container">
-                <h1>Product Details</h1>
-            </div>
-        </header>
-
+    <header class="header">
         <div class="container">
-            <div id="product-details" class="product-details"></div>
+            <h1>Product Details</h1>
+        </div>
+    </header>
+
+    <div class="body-wrapper">
+        <div class="container">
+            <div id="first-instance" class="first-instance-container"></div>
+            
             <div id="product-instances" class="product-instances"></div>
         </div>
     </div>
+
     <script src="product_script.js"></script>
 </body>
-
 </html>
