--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Ieftineala</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <header class="header-content">
+        <h1 id="title">PROJECT IEFTINEALĂ</h1>
+        <nav>
+            <ul>
+                <li><a href="supermarkets/mega/mega.html">Mega Image</a></li>
+                <li><a href="supermarkets/penny/penny.html">Penny</a></li>
+                <li><a href="supermarkets/kaufland/kaufland.html">Kaufland</a></li>
+                <li><a href="supermarkets/auchan/auchan.html">Auchan</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="body-wrapper">
-        <header>
-            <h1 id="title">PROJECT IEFTINEALĂ</h1>
-            <nav>
-                <ul>
-                    <li><a href="supermarkets/mega/mega.html">Mega Image</a></li>
-                    <li><a href="supermarkets/penny/penny.html">Penny</a></li>
-                    <li><a href="supermarkets/kaufland/kaufland.html">Kaufland</a></li>
-                    <li><a href="supermarkets/auchan/auchan.html">Auchan</a></li>
-                </ul>
-            </nav>
-        </header>
         <div id="similar-products"></div>
     </div>
     <script src="scripts.js"></script>
 </body>
+
 </html>
