added admin page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Ieftineala</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -17,6 +18,7 @@
                 <li><a href="supermarkets/penny/penny.html">Penny</a></li>
                 <li><a href="supermarkets/kaufland/kaufland.html">Kaufland</a></li>
                 <li><a href="supermarkets/auchan/auchan.html">Auchan</a></li>
+                <li><a href="admin/admin.html" class="settings-button"><i class="fas fa-cog"></i></a></li>
             </ul>
         </nav>
     </header>
