--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
                 <li><a href="supermarkets/penny/penny.html">Penny</a></li>
                 <li><a href="supermarkets/kaufland/kaufland.html">Kaufland</a></li>
                 <li><a href="supermarkets/auchan/auchan.html">Auchan</a></li>
-                <li><a href="admin/admin.html" class="settings-button"><i class="fas fa-cog"></i></a></li>
+                <li><a href="settings/settings.html" class="settings-button"><i class="fas fa-cog"></i></a></li>
             </ul>
         </nav>
     </header>
